--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -49,9 +49,9 @@
       </div>
       <div class="host-details">
       <div class="host-thumbnail-checkout">
-        <img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar" id ="avatar-host-size" alt="">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Michelle_Borromeo_Actor_Headshots_30.jpg" class="avatar cover-fit" id ="avatar-host-size" alt="">
       </div>
-      <p>Your host, <strong>Sebastien</strong></p>
+      <p>Your host, <strong>Jenny</strong></p>
       <p style="font-size: 16px" class="text-center">Hi, Thanks for booking my Island 🏝. </p><p style="font-size: 16px" class="text-center">I can't wait to host you here. I'll be sending some more
       info closer to your booking.In the meantime, if you have any questions please send me a message below!</p>
       <a class="btn-search btn-search-index btn-island-new btn-guest" href="#"> Message Host</a>
